# S4CSTP

./: LICENSE  README.md  pyproject.toml
code/: general_tests.ipynb
csv/: header_content.csv  header_content_old.csv  preamp_gains.csv  read_noises.csv
notebooks/: general_tests.ipynb  keywords.csv  utils.ipynb
scripts/: download_release.sh  read_log.py
tests/: report.html  test_keywords.py
